crates/app-notes/tests/snapshots/snapshot__comments_open.snap
---
source: crates/app-notes/tests/snapshot.rs
expression: s
---
┌ notes ───────────────┐┌ editor ──────────────────────────────────────────────┐
│ Async Await · draft  ││Async Await                                           │
│ Rust Ownership · live││                                                      │
│                      ││Async functions return a Future.                      │
│           ┌ comments: Async Await ───────────────────────────────┐           │
│           │  alice · approved                                    │           │
│           │  Great explanation!                                  │igate      │
│           │                                                      │           │
│           │  bob · approved                                      │           │
│           │  Could you add an example with tokio?                │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │┌ add comment (enter to submit  ·  esc to close) ────┐│           │
│           ││ _                                                  ││           │
│           │└────────────────────────────────────────────────────┘│           │
│           └──────────────────────────────────────────────────────┘           │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
