crates/app-notes/tests/snapshots/snapshot__editor_focused.snap
---
source: crates/app-notes/tests/snapshot.rs
expression: s
---
┌ notes ───────────────┐┌ editor  [NORMAL] ────────────────────────────────────┐
│ Async Await · draft  ││Async Await                                           │
│ Rust Ownership · live││                                                      │
│                      ││Async functions return a Future.                      │
│                      ││                                                      │
│                      ││slug: async-await  ·  tags: rust, async               │
│                      ││i → insert  ·  :w → save  ·  c → comments  ·  Tab →   │
│                      ││list                                                  │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
