crates/app-notes/tests/snapshots/snapshot__empty.snap
---
source: crates/app-notes/tests/snapshot.rs
expression: s
---
┌ notes ───────────────┐┌ editor ──────────────────────────────────────────────┐
│                      ││                                                      │
│                      ││no notes yet — connecting to stdb…                    │
│                      ││                                                      │
│                      ││j/k  navigate list  ·  Tab  focus editor  ·  i  insert│
│                      ││·  :w  save  ·  c  comments                           │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
