crates/app-notes/tests/snapshots/snapshot__insert_mode.snap
---
source: crates/app-notes/tests/snapshot.rs
expression: s
---
┌ notes ───────────────┐┌ editor  [INSERT] ────────────────────────────────────┐
│ Async Await · draft  ││Async Await                                           │
│ Rust Ownership · live││                                                      │
│                      ││Async functions return a Future._                     │
│                      ││                                                      │
│                      ││slug: async-await  ·  tags: rust, async               │
│                      ││esc → normal  ·  :w → save                            │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
