crates/app-notes/tests/snapshots/snapshot__list_selected.snap
---
source: crates/app-notes/tests/snapshot.rs
expression: s
---
┌ notes ───────────────┐┌ editor ──────────────────────────────────────────────┐
│ Async Await · draft  ││Async Await                                           │
│ Rust Ownership · live││                                                      │
│                      ││Async functions return a Future.                      │
│                      ││                                                      │
│                      ││slug: async-await  ·  tags: rust, async               │
│                      ││Tab → editor  ·  c → comments  ·  j/k → navigate      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
